lvl_junior/administrator-kubernetes-junior/07_Lifehacks/077-step5/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: debug-5
  name: backend-svc
spec:
  selector:
    app: go-http-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
